--- a/backend/TestTask.WebAPI/appsettings.Development.json
+++ b/backend/TestTask.WebAPI/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
   "WebClientUrl": "http://localhost:4200",
+  "AzureFuncUrl": "http://localhost:7071/api/EmailNotificationFunction",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
